testdata/error/imbalance_posting_amount.ledger
; Example of Ledger with imbalance transaction

2024/01/20 * Shop
    Assets:Bank                              -10,000 JPY
    Expenses:Cash                              9,000 JPY
